--- a/index.html
+++ b/index.html
@@ -14,7 +14,15 @@
 </head>
 
 <body>
-	<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation"></nav>
+	<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">     
+        <div class="container">
+            <div class="collapse navbar-collapse navbar-ex1-collapse">
+                <ul class="nav navbar-nav">
+                    <li class="titleApplication"><p>Contact List Application</p></li>                    
+                </ul>
+            </div>
+        </div>
+    </nav>
 
     <div class="container" ng-controller="ContactController">
 		<div class="row">
@@ -29,7 +37,7 @@
 		<footer>
             <div class="row">
                 <div class="col-lg-12">
-                    <p><b>Diego Souza - <a href="https://github.com/diegofss11">GitHub</a></b>
+                    <p><b>Diego Souza - <a target="_blank" href="https://github.com/diegofss11">GitHub</a></b>
                     </p>
                 </div>
             </div>
