Working on FindAll method

--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
 	</div>
     
 
+	<!-- Servers Configuration JS -->
+	
    	<!-- Angular JS -->
     <script src="/contents/js/angular.min.js"></script>
 	<script src="/contents/js/angular-route.js"></script>
