Include SASS code

--- a/index.html
+++ b/index.html
@@ -2,12 +2,11 @@
 <html lang="en" ng-app="contactListApp">
 <head>
     <meta charset="utf-8">
-    <meta name="description" content="Contact List Application for Questrade Inc">
+    <meta name="description" content="Contact List Application">
     <meta name="author" content="Diego Freitas Siqueira Souza">
 
     <!-- Bootstrap core CSS -->
     <link href="contents/css/bootstrap.css" rel="stylesheet">
-    <link href="contents/css/shop-homepage.css" rel="stylesheet">
     <link href="contents/css/style.css" rel="stylesheet">
 
     <title>Contact List</title>
