--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     </head>
 
     <body class="container-fluid">
-        <header class="main-header">List Application</header>
+        <header class="main-header">Contact List Application</header>
 
 
         <div class="row">
