--- a/public/index.html
+++ b/public/index.html
@@ -43,6 +43,7 @@
         <script src="/vendor/angular-route/angular-route.js"></script>
         <script src="/dist/js/templates_cache.js"></script>
         <script src="/vendor/angular-modal/modal.js"></script>
+        <script src="/vendor/angular-animate/angular-animate.js"></script>
         <script src="/js/app.js"></script>
         <script src="/js/controllers/ConfirmationAction.controller.js"></script>
         <script src="/js/controllers/ContactModal.controller.js"></script>
